--- a/src/ui/forms/basewindow.ui
+++ b/src/ui/forms/basewindow.ui
@@ -224,6 +224,7 @@
      <string>Abo&amp;ut</string>
     </property>
     <addaction name="actionAuthor"/>
+    <addaction name="actionAbout_Qt"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuAbout"/>
@@ -270,6 +271,14 @@
   <action name="actionAuthor">
    <property name="text">
     <string>&amp;Author</string>
+   </property>
+  </action>
+  <action name="actionAbout_Qt">
+   <property name="text">
+    <string>About &amp;Qt</string>
+   </property>
+   <property name="toolTip">
+    <string>About Qt</string>
    </property>
   </action>
  </widget>
